--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,8 @@
 name: C/C++ CI
 
 on:
-  push:
-    branches:
-      - master
-      - release/*
+  workflow_dispatch
+
 
 jobs:
   build-esp8266-wroom02-at:
