--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,137 +1,169 @@
-name: Build ESP-AT Project
+name: C/C++ CI
 
-on: workflow_dispatch
+on:
+  workflow_dispatch
 
 jobs:
-  build-esp32-wroom-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: WROOM-32
-      artifacts_name: esp32-wroom-at
-    secrets: inherit
+  build-esp8266-wroom02-at:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3.1.0
+    - name: clone esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/requirements.txt
+        mkdir build
+        echo -e "{\"platform\": \"PLATFORM_ESP8266\", \"module\": \"WROOM-02\", \"silence\": 0}" > build/module_info.json
+        ./build.py reconfigure || echo "skip exception"
+      shell: bash
+    - name: Install dependencies
+      env:
+        IDF_PATH: ${{ github.workspace }}/esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/esp-idf/requirements.txt
+    - name: Compiling
+      run: |
+        python ./esp-idf/tools/idf_tools.py --non-interactive install && eval "$(python ./esp-idf/tools/idf_tools.py --non-interactive export)" || exit 1
+        python ./esp-idf/tools/idf_tools.py export --prefer-system
+        ./build.py build
+        upload_dir=esp8266-wroom02-at
+        mkdir -p $upload_dir $upload_dir/bootloader $upload_dir/partition_table $upload_dir/customized_partitions $upload_dir/factory
+        cp build/flash_project_args $upload_dir/download.config
+        cp sdkconfig $upload_dir/
+        cp build/*.bin $upload_dir/
+        cp build/*.elf $upload_dir/
+        cp build/*.map $upload_dir/
+        cp build/bootloader/*.bin $upload_dir/bootloader/
+        cp build/partition_table/*.bin $upload_dir/partition_table/
+        cp build/customized_partitions/*.bin $upload_dir/customized_partitions/
+        cp build/flasher_args.json $upload_dir/
+        cp build/flash_project_args $upload_dir/download.config
+        cp build/factory/* $upload_dir/factory
+      shell: bash
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: esp8266-wroom02-at
+        path: esp8266-wroom02-at
 
-  build-esp32-wrover-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: WROVER-32
-      artifacts_name: esp32-wrover-at
-    secrets: inherit
+  build-esp8266_wroom_5V2L_at:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3.1.0
+    - name: clone esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/requirements.txt
+        mkdir build
+        echo -e "{\"platform\": \"PLATFORM_ESP8266\", \"module\": \"WROOM-5V2L\", \"silence\": 0}" > build/module_info.json
+        ./build.py reconfigure || echo "skip exception"
+      shell: bash
+    - name: Install dependencies
+      env:
+        IDF_PATH: ${{ github.workspace }}/esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/esp-idf/requirements.txt
+    - name: Compiling
+      run: |
+        python ./esp-idf/tools/idf_tools.py --non-interactive install && eval "$(python ./esp-idf/tools/idf_tools.py --non-interactive export)" || exit 1
+        python ./esp-idf/tools/idf_tools.py export --prefer-system
+        ./build.py build
+        upload_dir=esp8266-wroom-5V2L-at
+        mkdir -p $upload_dir $upload_dir/bootloader $upload_dir/partition_table $upload_dir/customized_partitions $upload_dir/factory
+        cp build/flash_project_args $upload_dir/download.config
+        cp sdkconfig $upload_dir/
+        cp build/*.bin $upload_dir/
+        cp build/*.elf $upload_dir/
+        cp build/*.map $upload_dir/
+        cp build/bootloader/*.bin $upload_dir/bootloader/
+        cp build/partition_table/*.bin $upload_dir/partition_table/
+        cp build/customized_partitions/*.bin $upload_dir/customized_partitions/
+        cp build/flasher_args.json $upload_dir/
+        cp build/flash_project_args $upload_dir/download.config
+        cp build/factory/* $upload_dir/factory
+      shell: bash
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: esp8266-wroom-5V2L-at
+        path: esp8266-wroom-5V2L-at
 
-  build-esp32-pico-d4-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: PICO-D4
-      artifacts_name: esp32-pico-d4-at
-    secrets: inherit
+  build-esp8285-1MB-at:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3.1.0
+    - name: clone esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/requirements.txt
+        mkdir build
+        echo -e "{\"platform\": \"PLATFORM_ESP8266\", \"module\": \"ESP8266_1MB\", \"silence\": 0}" > build/module_info.json
+        ./build.py reconfigure || echo "skip exception"
+      shell: bash
+    - name: Install dependencies
+      env:
+        IDF_PATH: ${{ github.workspace }}/esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/esp-idf/requirements.txt
+    - name: Compiling
+      run: |
+        python ./esp-idf/tools/idf_tools.py --non-interactive install && eval "$(python ./esp-idf/tools/idf_tools.py --non-interactive export)" || exit 1
+        python ./esp-idf/tools/idf_tools.py export --prefer-system
+        ./build.py build
+        upload_dir=esp8285-1MB-at
+        mkdir -p $upload_dir $upload_dir/bootloader $upload_dir/partition_table $upload_dir/customized_partitions $upload_dir/factory
+        cp build/flash_project_args $upload_dir/download.config
+        cp sdkconfig $upload_dir/
+        cp build/*.bin $upload_dir/
+        cp build/*.elf $upload_dir/
+        cp build/*.map $upload_dir/
+        cp build/bootloader/*.bin $upload_dir/bootloader/
+        cp build/partition_table/*.bin $upload_dir/partition_table/
+        cp build/customized_partitions/*.bin $upload_dir/customized_partitions/
+        cp build/flasher_args.json $upload_dir/
+        cp build/flash_project_args $upload_dir/download.config
+        cp build/factory/* $upload_dir/factory
+      shell: bash
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: esp8285-1MB-at
+        path: esp8285-1MB-at
 
-  build-esp32-solo-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: SOLO-1
-      artifacts_name: esp32-solo-1-at
-    secrets: inherit
-
-  build-esp32-d2wd-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: ESP32-D2WD
-      artifacts_name: esp32-d2wd-at
-    secrets: inherit
-
-  build-esp32-mini-1-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: MINI-1
-      artifacts_name: esp32-mini-1-at
-    secrets: inherit
-
-  build-esp32-sdio-at:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: ESP32-SDIO
-      artifacts_name: esp32-sdio-at
-    secrets: inherit
-
-  build-esp32-at-all-function-test-without-bt:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: WROVER-32
-      artifacts_name: esp32-at-all-function-test-without-bt
-    secrets: inherit
-
-  build-esp32-at-all-function-test-just-bt:
-    uses: ./.github/workflows/build_template_esp32.yml
-    with:
-      module_name: WROVER-32
-      artifacts_name: esp32-at-all-function-test-just-bt
-    secrets: inherit
-
-  build-esp32c3-mini-1-at:
-    uses: ./.github/workflows/build_template_esp32c3.yml
-    with:
-      module_name: MINI-1
-      artifacts_name: esp32c3-mini-1-at
-    secrets: inherit
-
-  build-esp32c3-spi-at:
-    uses: ./.github/workflows/build_template_esp32c3.yml
-    with:
-      module_name: ESP32C3-SPI
-      artifacts_name: esp32c3-spi-at
-    secrets: inherit
-
-  build-esp32c3-at-full-function-test:
-    uses: ./.github/workflows/build_template_esp32c3.yml
-    with:
-      module_name: MINI-1
-      artifacts_name: esp32c3-at-full-function-test
-    secrets: inherit
-
-  build-esp32c3-rainmaker:
-    uses: ./.github/workflows/build_template_esp32c3.yml
-    with:
-      module_name: ESP32C3_RAINMAKER
-      artifacts_name: esp32c3-rainmaker-at
-    secrets: inherit
-
-  build-esp32c2-4mb-at:
-    uses: ./.github/workflows/build_template_esp32c2.yml
-    with:
-      module_name: ESP32C2-4MB
-      artifacts_name: esp32c2-4MB-at
-    secrets: inherit
-
-  build-esp32c2-2mb-at:
-    uses: ./.github/workflows/build_template_esp32c2.yml
-    with:
-      module_name: ESP32C2-2MB
-      artifacts_name: esp32c2-2MB-at
-    secrets: inherit
-
-  build-esp32c2-ble-2mb-at:
-    uses: ./.github/workflows/build_template_esp32c2.yml
-    with:
-      module_name: ESP32C2-BLE-2MB
-      artifacts_name: esp32c2-ble-2mb-at
-    secrets: inherit
-
-  build-esp32c5-4mb-at:
-    uses: ./.github/workflows/build_template_esp32c5.yml
-    with:
-      module_name: ESP32C5-4MB
-      artifacts_name: esp32c5-4MB-at
-    secrets: inherit
-
-  build-esp32c6-4mb-at:
-    uses: ./.github/workflows/build_template_esp32c6.yml
-    with:
-      module_name: ESP32C6-4MB
-      artifacts_name: esp32c6-4MB-at
-    secrets: inherit
-
-  build-esp32s2-mini-at:
-    uses: ./.github/workflows/build_template_esp32s2.yml
-    with:
-      module_name: MINI
-      artifacts_name: esp32s2-mini-at
-    secrets: inherit
+  build-esp8266-wroom02-n-at:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3.1.0
+    - name: clone esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/requirements.txt
+        mkdir build
+        echo -e "{\"platform\": \"PLATFORM_ESP8266\", \"module\": \"WROOM-02-N\", \"silence\": 0}" > build/module_info.json
+        ./build.py reconfigure || echo "skip exception"
+      shell: bash
+    - name: Install dependencies
+      env:
+        IDF_PATH: ${{ github.workspace }}/esp-idf
+      run: |
+        python -m pip install --user -r /home/runner/work/esp-at/esp-at/esp-idf/requirements.txt
+    - name: Compiling
+      run: |
+        python ./esp-idf/tools/idf_tools.py --non-interactive install && eval "$(python ./esp-idf/tools/idf_tools.py --non-interactive export)" || exit 1
+        python ./esp-idf/tools/idf_tools.py export --prefer-system
+        ./build.py build
+        upload_dir=esp8266-wroom02-n-at
+        mkdir -p $upload_dir $upload_dir/bootloader $upload_dir/partition_table $upload_dir/customized_partitions $upload_dir/factory
+        cp build/flash_project_args $upload_dir/download.config
+        cp sdkconfig $upload_dir/
+        cp build/*.bin $upload_dir/
+        cp build/*.elf $upload_dir/
+        cp build/*.map $upload_dir/
+        cp build/bootloader/*.bin $upload_dir/bootloader/
+        cp build/partition_table/*.bin $upload_dir/partition_table/
+        cp build/customized_partitions/*.bin $upload_dir/customized_partitions/
+        cp build/flasher_args.json $upload_dir/
+        cp build/flash_project_args $upload_dir/download.config
+        cp build/factory/* $upload_dir/factory
+      shell: bash
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: esp8266-wroom02-n-at
+        path: esp8266-wroom02-n-at
