--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Compiling
       run: |
         python ./esp-idf/tools/idf_tools.py --non-interactive install && eval "$(python ./esp-idf/tools/idf_tools.py --non-interactive export)" || exit 1
+        echo "IDF installed"
         python ./esp-idf/tools/idf_tools.py export --prefer-system
+        echo "IDF export OK"
         ./build.py build
         upload_dir=esp8266-wroom02-n-at
         mkdir -p $upload_dir $upload_dir/bootloader $upload_dir/partition_table $upload_dir/customized_partitions $upload_dir/factory
